--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -391,10 +391,9 @@ body {
             margin: 0 10px 36px 0;
             padding: 0;
             font-size: 22px;
-            line-height: normal;
-            height: 50px;
+            line-height: 29px;
+            height: 58px;
             overflow: hidden;
-            width: calc(100% - 20px);
             -ms-word-wrap: break-word;
             word-wrap: break-word;
         }
