--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -117,7 +117,7 @@
     <script type="text/ng-template" id="dialog.tmpl.html">
         <md-dialog class="selected-class-dialog">
             <md-toolbar layout="row" layout-align="space-between center">
-                <img src="@Url.CdnContent("/Images/Site/course_choose_popup.png")" />
+                <img src="@Url.CdnContent("/Images/Site/course_choose_popup.png?v=1")" />
                 <div class="title">Selected Class</div>
             </md-toolbar>
             <md-dialog-content>
