--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -299,10 +299,9 @@ body .quiz-template .bottom .name {
   margin: 0 0 36px 10px;
   padding: 0;
   font-size: 22px;
-  line-height: normal;
-  height: 50px;
+  line-height: 29px;
+  height: 58px;
   overflow: hidden;
-  width: calc(80%);
   -ms-word-wrap: break-word;
   word-wrap: break-word;
 }
