--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -559,6 +559,7 @@ body {
 // md-scroll-mask also got z-index of 99 for fixing the floating menu issue on scroll.
 .md-dialog-container {
     z-index: 80;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 md-icon {
