--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -25,8 +25,13 @@ body.collapseHeader {
         margin-right: -@widthOfChat;
     }
 
-    padding-top: 205px;
+    md-input-container {
+        margin: 5px 0;
+    }
 
+    .explore {
+        padding-top: 205px;
+    }
 
     .status-strip, .title-strip {
         .displayFlex;
@@ -424,7 +429,6 @@ body.collapseHeader {
             flex-wrap: wrap;
             .justifyContet(center);
             margin: 20px 0 0 0;
-
         }
 
         #selected-classes {
@@ -460,7 +464,7 @@ body.collapseHeader {
                 }
 
                 &.ng-enter-stagger {
-                    transition-delay: 0.5s;
+                    transition-delay: 1s;
                     transition-duration: 0.5s;
                 }
 
@@ -603,20 +607,38 @@ body.collapseHeader {
         padding-right: 140px;
         padding-bottom: 100px;
 
+        @media(max-width: 600px) {
+            background-image: none;
+            padding: 0;
+            .justifyContet(flex-start);
+            height: auto;
+            margin-top: 0;
+        }
+
         h2 {
             color: @color-beige;
             font-weight: bold;
+
+            @media(max-width: 600px) {
+                font-size: 26px;
+            }
         }
 
         .text {
             font-size: 18px;
             white-space: pre-wrap;
             margin-top: 20px;
+
+            @media(max-width: 600px) {
+                margin-top: 10px;
+                font-size: 16px;
+            }
         }
     }
 
     .create-class {
         margin: 30px auto 0 auto;
+        padding: 0 10px;
 
         .buttons {
             text-align: right;
