--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -2,7 +2,7 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.University.Resources
 <div collapse-header>
-    <div ng-if="!cc.showCreateClass">
+    <div class="explore" ng-if="!cc.showCreateClass">
         <div class="top-container">
             <div class="status-strip" ng-if="cc.selectedCourses.length && !cc.showCreateClass">
                 <h2>You've added&nbsp;</h2><ng-pluralize count="cc.selectedCourses.length"
@@ -126,7 +126,7 @@
             </md-toolbar>
             <md-dialog-content>
                 <div class="data-wrapper" ng-if="!cd.confirmStep">
-                <div class="department-name" color="{{::cd.course.departmentId}}" ng-bind="cd.course.department"></div>
+                <div class="department-name ellipsis" color="{{::cd.course.departmentId}}" ng-bind="cd.course.department"></div>
                     <div class="box-container box-template box-style slim">
                             <div class="icon background" color="{{cd.course.departmentId}}" ng-bind="cd.course.name.substr(0,2) | lowercase"></div>
                         <div class="data">
