--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -2,7 +2,7 @@
 @boxColor0: #64A9F8;
 @boxColor1: #ff9853;
 @boxColor2: #e775ce;
-@boxColor3: #ffb933;
+@boxColor3: #10b2c1;
 @boxColor4: #848fa6;
 @boxColor5: #f36f6e;
 @boxColor6: #f76446;
