--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -13,6 +13,7 @@
             color: #fff;
             padding: 0 3%;
             margin: 0;
+            width: 100%;
 
             img {
                 background-color: #f1f1f1;
@@ -21,6 +22,12 @@
 
         span {
             padding-left: 20px;
+            width: 100%;
+
+            @media(max-width: 600px) {
+                font-size: 24px;
+                padding-left: 10px;
+            }
         }
     }
 
