--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -368,7 +368,7 @@
                 padding: 0 10px 0 25px;
                 width: ~"calc(100% - @{buttonWidth})";
                 border: 0;
-                .placeHolder(@textColorBlack);
+                .placeHolder(@textColorGrey);
             }
 
             .search-button {
