--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.css
@@ -47,12 +47,12 @@
 .page-body .main-md-sidenav {
   left: 0;
   position: fixed !important;
-  top: 60px;
+  top: 65px;
   border-radius: 5px;
   width: 235px;
   margin-left: 0;
   z-index: 10;
-  height: calc(100vh - 65px + 5px);
+  height: calc(100vh - 65px);
   background: #dadada;
 }
 @media (min-width: 960px) {
