--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -63,12 +63,12 @@
     .main-md-sidenav {
         left: 0;
         position: fixed !important;
-        top: @heightOfHeader - 5;
+        top: @heightOfHeader;
         border-radius: 5px;
         width: 235px;
         margin-left: 0;
         z-index: 10;
-        height: ~"calc(100vh - @{heightOfHeader} + 5px)";
+        height: ~"calc(100vh - @{heightOfHeader})";
         background: @backgroundColor;
 
 
