--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
@@ -105,7 +105,7 @@
             margin-top: 0;
 
             input {
-                .placeHolder(@textColorBlack);
+                .placeHolder(@textColorGrey);
             }
 
             button {
