--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="progress-info">
-            <div class="progress background" d-color="{{::e.name.length}}"></div>
+            <div class="progress background" color="{{::e.departmentId}}"></div>
             <div class="status">
                 <div class="status-title" ng-hide="::e.membersCount === undefined">
                     {{::e.membersCount}} @GeneralResources.Members
