--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.rtl.css
@@ -83,16 +83,16 @@
   fill: #848fa6;
 }
 .color3 {
-  color: #ffb933;
+  color: #10b2c1;
 }
 .color3.border {
-  border-color: #ffb933;
+  border-color: #10b2c1;
 }
 .color3.background {
-  background: #ffb933;
+  background: #10b2c1;
 }
 .color3.fill {
-  fill: #ffb933;
+  fill: #10b2c1;
 }
 .color2 {
   color: #e775ce;
