--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
@@ -213,7 +213,7 @@
                         line-height: 32px;
                         padding: 0 15px;
                         border: 0;
-                        .placeHolder(@textColorBlack);
+                        .placeHolder(@textColorGrey);
                         width: 100%;
                     }
                 }
