--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
@@ -46,12 +46,20 @@
   color: #fff;
   padding: 0 3%;
   margin: 0;
+  width: 100%;
 }
 .library .university h1 img {
   background-color: #f1f1f1;
 }
 .library .university span {
   padding-left: 20px;
+  width: 100%;
+}
+@media (max-width: 600px) {
+  .library .university span {
+    font-size: 24px;
+    padding-left: 10px;
+  }
 }
 .library .corner:after {
   content: "";
