--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.rtl.css
@@ -298,21 +298,21 @@
   border: 0;
 }
 .library-choose .search-form-wrapper form .search-text::-webkit-input-placeholder {
-  color: #212325;
+  color: #888b8e;
   opacity: 1;
 }
 .library-choose .search-form-wrapper form .search-text:-moz-placeholder {
   /* Firefox 18- */
-  color: #212325;
+  color: #888b8e;
   opacity: 1;
 }
 .library-choose .search-form-wrapper form .search-text::-moz-placeholder {
   /* Firefox 19+ */
-  color: #212325;
+  color: #888b8e;
   opacity: 1;
 }
 .library-choose .search-form-wrapper form .search-text:-ms-input-placeholder {
-  color: #212325;
+  color: #888b8e;
   opacity: 1;
 }
 .library-choose .search-form-wrapper form .search-button {
