--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
@@ -17,11 +17,11 @@
             <h3 class="form-title">@AccountSettingsResources.ChoosePassword</h3>
             <div class="form-group">
                 @Html.ValidationMessageFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control",required="required", autofocus = "autofocus", placeholder = @AccountSettingsResources.NewPassword })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control",required="required", autofocus = "autofocus", placeholder = AccountSettingsResources.NewPassword })
             </div>
             <div class="form-group">
                 @Html.ValidationMessageFor(m=>m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = @AccountSettingsResources.ConfirmPassword })
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = AccountSettingsResources.ConfirmPassword })
             </div>
             <div class="form-actions">
                 <button type="submit" class="action-btn pull-right">
