--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
@@ -37,7 +37,7 @@
         <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" ui-on-drop="i.addItemToTab($data,e)" class="folder-name i-q-wrapper" ng-repeat="e in t.tabs" ng-click="t.tabChange(e)">
             <div class="name-and-icon content">
                 <div class="text ellipsis name" ng-bind="::e.name"></div>
-                <div class="counter">{{e.count}} @BoxResources.Items</div>
+                <div class="counter">{{e.count}} @IndexResources.Items</div>
             </div>
         </li>
         <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" class="add-folder folder-name item-animate i-q-wrapper">
