--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -12,7 +12,7 @@
             <div class="universityStats" layout="row" layout-align="space-between center">
                 <div>{{::u.info.boxes | megaNumber}} @GeneralResources.Classes</div>
                 <div>{{::u.info.users | megaNumber}} @GeneralResources.Members</div>
-                <div>{{::u.info.items | megaNumber}} @BoxResources.Items</div>
+                <div>{{::u.info.items | megaNumber}} @IndexResources.Items</div>
             </div>
         </div>
     </a>
