--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Apps.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Apps.cshtml
@@ -54,7 +54,7 @@
             <div class="text">
                 <h3>
                     @StaticPagesResources.AppsSectionTitle3A
-                <a href="@Url.RouteUrl("ClassNotes")">@StaticPagesResources.AppsSectionTitle3B</a>
+                <a href="@Url.RouteUrl("ClassNotes")">@StaticPagesResources.FeaturesDescriptionB</a>
             </h3>
                 <div class="description">@StaticPagesResources.AppsSectionText3</div>
             </div>
