--- a/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
@@ -14,7 +14,7 @@
 <div srph-infinite-scroll="s.myPagingFunction()">
     <md-tabs md-selected="s.tabIndex" md-enable-disconnect="true" class="page-tabs">
         <md-tab md-on-select="s.changeTab('doc')" md-active="s.tab === 'doc'" ga-track-event="['search', 'search items']">
-            <md-tab-label>@BoxResources.Items</md-tab-label>
+            <md-tab-label>@IndexResources.Items</md-tab-label>
         </md-tab>
         <md-tab md-on-select="s.changeTab('course')" md-active="s.tab === 'course'" ga-track-event="['search', 'search classes']">
             <md-tab-label>@GeneralResources.Classes</md-tab-label>
