--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/SignIn.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/SignIn.cshtml
@@ -117,7 +117,7 @@
                     <input class="form-control" type="text" required placeholder="@SharedResources.LastName" name="lastName" />
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="email" required placeholder="@SharedResources.Email" name="NewEmail" id="register_email" />
+                    <input class="form-control" type="email" required placeholder="@LogOnResources.Email" name="NewEmail" id="register_email" />
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="password" required autocomplete="off" placeholder="@LogOnResources.Password" name="Password" />
