--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/UnregisterView.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/UnregisterView.cshtml
@@ -1,4 +1,5 @@
-﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Account.Resources
+@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @{
     var returnUrl = Request.QueryString["returnUrl"] ?? Request.UrlReferrer.ToString();
     var invId = Request.QueryString["invId"];
@@ -6,6 +7,6 @@
 }
 <div class="login-buttons">
     <a ng-click="ud.signup($event)" class="signup-header-btn" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signup" })" ga-track-event="['header', 'sign up']">@IndexResources.Signup</a>
-    <a ng-click="ud.signup($event)" class="signin-header-btn space-before" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signin" })" ga-track-event="['header', 'log in']">@IndexResources.Login</a>
+    <a ng-click="ud.signup($event)" class="signin-header-btn space-before" target="_self" href="@Url.RouteUrl("HomePage", new { returnUrl, invId, step="signin" })" ga-track-event="['header', 'log in']">@LogOnResources.LogIn</a>
 </div>
 
