--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -19,7 +19,7 @@
         <md-tab-label><span>@BoxResources.Feed</span></md-tab-label>
     </md-tab>
     <md-tab ui-sref="box.items" md-active="b.isActiveState('box.items')">
-        <md-tab-label><span>@BoxResources.Items</span></md-tab-label>
+        <md-tab-label><span>@IndexResources.Items</span></md-tab-label>
     </md-tab>
     <md-tab ui-sref="box.quiz" md-active="b.isActiveState('box.quiz')">
         <md-tab-label><span>@GeneralResources.Quizzes</span></md-tab-label>
