Bug fixes in course choose

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -819,6 +819,10 @@ md-icon {
 md-menu-content {
     padding: 0;
     border-radius: 5px;
+
+    .remove-box-btn {
+        text-transform: capitalize;
+    }
 }
 
 md-menu-item {
