--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -48,8 +48,8 @@
                 </button>
                 <md-menu-content width="1">
                     <md-menu-item>
-                        <button type="button" class="md-button" aria-label="remove box" ng-click="d.deleteBox($event,e)" ga-track-event="['dashboard', 'deleteBox']">
-                            @GeneralResources.Delete
+                        <button type="button" class="md-button remove-box-btn" aria-label="remove box" ng-click="d.deleteBox($event,e)" ga-track-event="['dashboard', 'deleteBox']">
+                            @GeneralResources.Remove
                         </button>
                     </md-menu-item>
                 </md-menu-content>
