--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -629,6 +629,9 @@ md-menu-content {
   padding: 0;
   border-radius: 5px;
 }
+md-menu-content .remove-box-btn {
+  text-transform: capitalize;
+}
 md-menu-item {
   min-height: 36px;
   height: 36px;
